# real_time_stock_market_analysis

./: .gitignore  README.md  dev-docker-compose.yml
docker/grafana/dashboards/: dashboard.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: datasource.yml
docker/kafka-connect-sinks/: questdb-sink-stock.properties
src/data_science/notebooks/: R_David_McLean_and_Jeffrey_Pontiff.ipynb  ols_vs_ridge_vs_lasso.ipynb  risk.ipynb  volatility.md
src/db_initializer/: Dockerfile  example.env  pyproject.toml  requirements.txt
src/db_initializer/app/: main.py
src/db_initializer/app/configs/: config.json  config.py
src/db_initializer/app/models/: stock_data.py
src/db_initializer/app/resources/sentiment/: sentiment.json
src/db_initializer/app/resources/stock_prices/: 2024_10_1min_AAPL.csv  2024_10_1min_TSLA.csv  2024_11_1min_GOOG.csv
src/db_initializer/app/services/: abstract_dbinitializer.py  csv_uploader.py  dbinitializer_factory.py  sentiment_uploader.py  stock_data_fetcher.py  stock_data_repository.py  stock_data_service.py
src/db_initializer/test/: pytest.ini  test_init.py
src/real_time_stock_data_publisher/: .dockerignore  example.env  pyproject.toml  requirements.txt
src/real_time_stock_data_publisher/app/: main.py
src/real_time_stock_data_publisher/app/configs/: config.json  config.py
src/real_time_stock_data_publisher/app/models/: stock_data.py
src/real_time_stock_data_publisher/app/services/: kafka_initializer.py  kafka_services.py  rand_stock_data_generator.py  stock_data_fetcher.py
